[gd_scene load_steps=49 format=2]

[ext_resource path="res://src/game/entities/enemies/sprout/states/DamageState.gd" type="Script" id=1]
[ext_resource path="res://assets/textures/enemies/Sprout/Move/Sprout_move.png" type="Texture" id=2]
[ext_resource path="res://assets/textures/enemies/Sprout/Death/Sprout-death.png" type="Texture" id=3]
[ext_resource path="res://assets/textures/enemies/Sprout/Damage/Sprout-damage.png" type="Texture" id=4]
[ext_resource path="res://assets/textures/enemies/Sprout/Attack/Sprout_attack.png" type="Texture" id=5]
[ext_resource path="res://assets/textures/enemies/Sprout/Idle/Sprout_idle.png" type="Texture" id=6]
[ext_resource path="res://src/game/entities/enemies/SproutStateMachine.gd" type="Script" id=7]
[ext_resource path="res://src/game/entities/enemies/sprout/states/IdleState.gd" type="Script" id=8]
[ext_resource path="res://src/game/entities/enemies/sprout/states/AlertState.gd" type="Script" id=9]
[ext_resource path="res://src/game/entities/enemies/sprout/Sprout.gd" type="Script" id=10]
[ext_resource path="res://src/game/entities/enemies/sprout/states/WalkState.gd" type="Script" id=11]
[ext_resource path="res://src/game/entities/enemies/sprout/states/DieState.gd" type="Script" id=12]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 20, 35 )

[sub_resource type="StyleBoxFlat" id=107]
bg_color = Color( 0.47451, 0.290196, 0, 1 )
border_width_left = 1
border_width_top = 1
border_width_bottom = 1
border_color = Color( 0.227451, 0.105882, 0.00392157, 1 )

[sub_resource type="StyleBoxFlat" id=108]
bg_color = Color( 0, 0, 0, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0.227451, 0.105882, 0.00392157, 1 )

[sub_resource type="AtlasTexture" id=104]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=105]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 96, 96, 96 )

[sub_resource type="AtlasTexture" id=106]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 192, 96, 96 )

[sub_resource type="AtlasTexture" id=84]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=85]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 0, 96, 96, 96 )

[sub_resource type="AtlasTexture" id=86]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 0, 192, 96, 96 )

[sub_resource type="AtlasTexture" id=87]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 0, 288, 96, 96 )

[sub_resource type="AtlasTexture" id=88]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 0, 384, 96, 96 )

[sub_resource type="AtlasTexture" id=89]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 0, 480, 96, 96 )

[sub_resource type="AtlasTexture" id=109]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=110]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 0, 96, 96, 96 )

[sub_resource type="AtlasTexture" id=111]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 0, 192, 96, 96 )

[sub_resource type="AtlasTexture" id=112]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 0, 288, 96, 96 )

[sub_resource type="AtlasTexture" id=113]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 0, 384, 96, 96 )

[sub_resource type="AtlasTexture" id=90]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=91]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 96, 96, 96 )

[sub_resource type="AtlasTexture" id=92]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 192, 96, 96 )

[sub_resource type="AtlasTexture" id=93]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 288, 96, 96 )

[sub_resource type="AtlasTexture" id=94]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 384, 96, 96 )

[sub_resource type="AtlasTexture" id=95]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 480, 96, 96 )

[sub_resource type="AtlasTexture" id=96]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 576, 96, 96 )

[sub_resource type="AtlasTexture" id=97]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 672, 96, 96 )

[sub_resource type="AtlasTexture" id=80]
atlas = ExtResource( 6 )
region = Rect2( 0, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=81]
atlas = ExtResource( 6 )
region = Rect2( 0, 96, 96, 96 )

[sub_resource type="AtlasTexture" id=82]
atlas = ExtResource( 6 )
region = Rect2( 0, 192, 96, 96 )

[sub_resource type="AtlasTexture" id=83]
atlas = ExtResource( 6 )
region = Rect2( 0, 288, 96, 96 )

[sub_resource type="AtlasTexture" id=98]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=99]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 96, 96, 96 )

[sub_resource type="AtlasTexture" id=100]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 192, 96, 96 )

[sub_resource type="AtlasTexture" id=101]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 288, 96, 96 )

[sub_resource type="AtlasTexture" id=102]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 384, 96, 96 )

[sub_resource type="SpriteFrames" id=7]
animations = [ {
"frames": [ SubResource( 104 ), SubResource( 105 ), SubResource( 106 ) ],
"loop": true,
"name": "alert",
"speed": 5.0
}, {
"frames": [ SubResource( 84 ), SubResource( 85 ), SubResource( 86 ), SubResource( 87 ), SubResource( 88 ), SubResource( 89 ) ],
"loop": true,
"name": "attack",
"speed": 10.0
}, {
"frames": [ SubResource( 109 ), SubResource( 110 ), SubResource( 111 ), SubResource( 112 ), SubResource( 113 ) ],
"loop": true,
"name": "damage",
"speed": 5.0
}, {
"frames": [ SubResource( 90 ), SubResource( 91 ), SubResource( 92 ), SubResource( 93 ), SubResource( 94 ), SubResource( 95 ), SubResource( 96 ), SubResource( 97 ) ],
"loop": true,
"name": "death",
"speed": 10.0
}, {
"frames": [ SubResource( 80 ), SubResource( 81 ), SubResource( 82 ), SubResource( 83 ) ],
"loop": true,
"name": "idle",
"speed": 10.0
}, {
"frames": [ SubResource( 98 ), SubResource( 99 ), SubResource( 100 ), SubResource( 101 ), SubResource( 102 ) ],
"loop": true,
"name": "walk",
"speed": 10.0
} ]

[sub_resource type="RectangleShape2D" id=103]
extents = Vector2( 162.5, 43.375 )

[node name="Sprout" type="KinematicBody2D"]
light_mask = 3
collision_layer = 4
collision_mask = 19
collision/safe_margin = 3.539
script = ExtResource( 10 )
speed = 100.0

[node name="StateMachine" type="Node" parent="."]
script = ExtResource( 7 )
character_path = NodePath("..")
START_STATE = NodePath("Idle")
STATES_LIST = [ NodePath("Idle"), NodePath("Walk"), NodePath("Alert"), NodePath("Die"), NodePath("Damage") ]

[node name="Idle" type="Node" parent="StateMachine"]
script = ExtResource( 8 )
state_id = "idle"

[node name="Walk" type="Node" parent="StateMachine"]
script = ExtResource( 11 )
state_id = "walk"

[node name="Alert" type="Node" parent="StateMachine"]
script = ExtResource( 9 )
state_id = "alert"

[node name="Timer" type="Timer" parent="StateMachine/Alert"]
wait_time = 2.0
one_shot = true

[node name="Die" type="Node" parent="StateMachine"]
script = ExtResource( 12 )
state_id = "die"

[node name="Damage" type="Node" parent="StateMachine"]
script = ExtResource( 1 )
state_id = "damage"

[node name="FirePosition" type="Position2D" parent="."]
position = Vector2( 0, -18.0339 )

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 1, 3 )
shape = SubResource( 1 )

[node name="Pivot" type="Node2D" parent="."]

[node name="HUD" type="Node2D" parent="Pivot"]

[node name="Control" type="Control" parent="Pivot/HUD"]
margin_right = 40.0
margin_bottom = 40.0

[node name="HpProgress" type="ProgressBar" parent="Pivot/HUD/Control"]
margin_left = -16.0
margin_top = -51.0
margin_right = 17.0
margin_bottom = -48.0
custom_styles/fg = SubResource( 107 )
custom_styles/bg = SubResource( 108 )
max_value = 3.0
step = 1.0
value = 3.0
percent_visible = false

[node name="RayCast2D" type="RayCast2D" parent="Pivot"]
cast_to = Vector2( -120, 0 )
collision_mask = 3

[node name="Body" type="AnimatedSprite" parent="Pivot"]
position = Vector2( 0, -3.8147e-06 )
scale = Vector2( 1.52478, 1.30208 )
frames = SubResource( 7 )
animation = "damage"
frame = 2
playing = true

[node name="DetectionArea" type="Area2D" parent="Pivot"]
visible = false
position = Vector2( 4, -12 )
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Pivot/DetectionArea"]
position = Vector2( -4, 12 )
shape = SubResource( 103 )

[connection signal="hit" from="." to="StateMachine" method="notify_hit"]
[connection signal="hp_changed" from="." to="StateMachine" method="_on_Sprout_hp_changed"]
[connection signal="timeout" from="StateMachine/Alert/Timer" to="StateMachine/Idle" method="_on_Timer_timeout"]
[connection signal="animation_finished" from="Pivot/Body" to="StateMachine" method="_on_Body_animation_finished"]
[connection signal="body_entered" from="Pivot/DetectionArea" to="StateMachine" method="_on_DetectionArea_body_entered"]
[connection signal="body_exited" from="Pivot/DetectionArea" to="StateMachine" method="_on_DetectionArea_body_exited"]
